[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homedoc-tailscale-status"
version = "0.1.2"
description = "Collects Tailscale status, normalizes snapshot, and optionally uses a local LLM to generate a Markdown report with findings."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Martin Fellner", email = "martin@martinfellner.at" }
]
keywords = ["tailscale", "status", "network", "report", "llm", "snapshot"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]

[project.scripts]
homedoc-tailscale-status = "homedoc_tailscale_status:main"

[tool.setuptools]
py-modules = ["homedoc_tailscale_status"]
